# frontend_tk_rs

./: .gitignore  Cargo.toml  architecture.mmd  openapi3_1.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  打卡.json
apps/web_api/: Cargo.toml
apps/web_api/src/: main.rs
apps/web_api/src/doamins/: project.rs
apps/web_api/src/services/: project.rs
crates/frontend_plugin_materal/: Cargo.toml  README.md
crates/frontend_plugin_materal/src/: enum_patch.rs  lib.rs
crates/frontend_plugin_materal/src/antd/: app.txt  dependencies.txt  gen_files.rs  mod.rs
crates/node_binding/: .npmignore  CHANGELOG.md  Cargo.toml  index.d.ts  index.js  package.json
crates/node_binding/.github/workflows/: CI.yml
crates/node_binding/__tests__/: get_ir.test.mjs
crates/node_binding/__tests__/fixtures/: name_collision_codegen.json  petstore.json  python_codegen_regression.json
crates/node_binding/npm/android-arm-eabi/: README.md  package.json
crates/node_binding/npm/android-arm64/: README.md  package.json
crates/node_binding/npm/darwin-arm64/: README.md  package.json
crates/node_binding/npm/darwin-universal/: README.md  package.json
crates/node_binding/npm/darwin-x64/: README.md  package.json
crates/node_binding/npm/freebsd-x64/: README.md  package.json
crates/node_binding/npm/linux-arm-gnueabihf/: README.md  package.json
crates/node_binding/npm/linux-arm-musleabihf/: README.md  package.json
crates/node_binding/npm/linux-arm64-gnu/: README.md  package.json
crates/node_binding/npm/linux-arm64-musl/: README.md  package.json
crates/node_binding/npm/linux-riscv64-gnu/: README.md  package.json
crates/node_binding/npm/linux-x64-gnu/: README.md  package.json
crates/node_binding/npm/linux-x64-musl/: README.md  package.json
crates/node_binding/npm/win32-arm64-msvc/: README.md  package.json
crates/node_binding/npm/win32-ia32-msvc/: README.md  package.json
crates/node_binding/npm/win32-x64-msvc/: README.md  package.json
crates/node_binding/src/: bootstrap.rs  get_service.rs  lib.rs  utils.rs
crates/node_binding/src/built_in/: aptx_commands.rs  barrel_commands.rs  gen.rs  ir.rs  mod.rs  model_enum_apply.rs  model_enum_plan.rs  model_gen.rs  model_ir.rs  output_lock.rs  python_commands.rs  std_commands.rs  terminal_codegen.rs
crates/simple_bundler/: Cargo.toml
crates/simple_bundler/examples/: bundler.rs
crates/simple_bundler/src/: import_visitor.rs  lib.rs  resolver.rs  simple_bundler.rs
crates/simple_bundler/tests/: bundler.rs  resolve.rs  test.ts  utils.ts
crates/swagger_gen/: .gitignore  Cargo.toml
crates/swagger_gen/benches/: codegen_pipeline.rs
crates/swagger_gen/examples/: gen.rs  pipeline_codegen.rs
crates/swagger_gen/src/: lib.rs
crates/swagger_gen/src/build_in_api_trait/: gen_api_trait.rs  mod.rs
crates/swagger_gen/src/built_in_api/: axios_js.rs  axios_ts.rs  mod.rs  uni_app.rs
crates/swagger_gen/src/built_in_api_trait/: gen_api_trait.rs
crates/swagger_gen/src/built_in_base_api/: mod.rs
crates/swagger_gen/src/built_in_utils/: mod.rs
crates/swagger_gen/src/core/: gen_api_factory.rs  js_api_context_helper.rs  js_helper.rs  mod.rs
crates/swagger_gen/src/gen_api/: axios_js.rs  axios_ts.rs  uni_app.rs
crates/swagger_gen/src/gen_api_trait/: gen_api_trait.rs  mod.rs
crates/swagger_gen/src/gen_declaration/: declaration.rs  mod.rs
crates/swagger_gen/src/manifest/: mod.rs  reporter.rs  schema.rs  tracker.rs
crates/swagger_gen/src/model_pipeline/: mod.rs  model.rs  orchestrator.rs  parser.rs  renderer.rs
crates/swagger_gen/src/pipeline/: layout.rs  mod.rs  model.rs  orchestrator.rs  parser.rs  renderer.rs  transform.rs  writer.rs
crates/swagger_gen/src/utils/: format_ts_code.rs  mod.rs  reference_object_extension.rs  schema_extension.rs  schema_utils.rs
crates/swagger_gen/tests/: gen_apis_test.rs  gen_model_test.rs  manifest_integration_test.rs  model_pipeline_test.rs  pipeline_test.rs
crates/swagger_gen/tests/utils/: get_open_api_object.rs  get_open_api_text.rs  mod.rs
crates/swagger_gen_python/: Cargo.toml
crates/swagger_gen_python/src/: lib.rs  py_types.rs  pydantic_model.rs  python_barrel.rs  python_functions.rs  python_tools.rs
crates/swagger_tk/: Cargo.toml
crates/swagger_tk/examples/: gen.rs
crates/swagger_tk/src/: lib.rs
crates/swagger_tk/src/extension/: media_type_object.rs  mod.rs  response_value.rs  schema_enum.rs
crates/swagger_tk/src/gen_type/: mod.rs  property_data.rs  schema_data.rs
crates/swagger_tk/src/getter/: get_all_schema.rs  get_controller_description.rs  get_paths_from_tag.rs  get_schema.rs  get_schema_by_name.rs  get_schema_name_from_ref.rs  get_schema_name_list.rs  get_tags.rs  get_tags_from_open_api.rs  get_tags_from_path_item.rs  get_tags_from_paths.rs  mod.rs
crates/swagger_tk/src/model/: callback_value.rs  components_callbacks.rs  components_headers.rs  components_object.rs  components_parameters.rs  components_path_items.rs  components_responses.rs  contact.rs  external_documentation_object.rs  header_object.rs  license.rs  link_object.rs  media_type_object.rs  mod.rs  (+27 more)
crates/swagger_tk/tests/: gen_apis_test.rs  gen_model_test.rs  get_api_list_test.rs  get_paths_from_tag_test.rs  get_property_data_list_test.rs  get_schema_name_list_test.rs  get_schema_test.rs  get_tags_from_open_api_test.rs  get_tags_test.rs  model_test.rs  tags_test.rs
crates/ts_runtime/: Cargo.toml
crates/ts_runtime/src/: compiler.rs  dir.rs  lib.rs  module_loader.rs  runner.rs
crates/ts_runtime/tests/: compiler.rs  dir.rs  export-default-async-function.ts  export-default-function.ts  quickjs_test.rs  resolver.rs  runner.rs  runner1.ts  runner2.ts  runner3.ts  runner4.ts  test.ts  utils.ts
(+120 files in other folders)
