[package]
name = "frontend_plugin_materal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aptx_frontend_tk_binding_plugin = { version = "0.1.0", path = "../node_binding_plugin" }
clap = { version = "4.5.29", features = ["derive"] }
path-clean = "1.0.1"
swagger_gen = { version = "0.1.0", path = "../swagger_gen" }
swagger_tk = { version = "0.1.0", path = "../swagger_tk" }
