[package]
edition = "2021"
name = "aptx_frontend_tk_binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aptx_frontend_tk_binding_plugin = { version = "0.1.0", path = "../node_binding_plugin" }
clap = { version = "4.5.29", features = ["derive"] }
libloading = "0.8.6"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
swagger_gen = { version = "0.1.0", path = "../swagger_gen" }
swagger_tk = { version = "0.1.0", path = "../swagger_tk" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
