[package]
edition = "2021"
name = "aptx_frontend_tk_binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aptx_frontend_tk_binding_plugin = { version = "0.1.0", path = "../node_binding_plugin" }
clap = { version = "4.5.53", features = ["derive"] }
frontend_plugin_materal = { version = "0.1.0", path = "../frontend_plugin_materal" }
libloading = "0.9.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.6.1", default-features = false, features = ["napi4"] }
napi-derive = "3.4.0"
serde_json = "1.0.145"
swagger_gen = { version = "0.1.0", path = "../swagger_gen" }
swagger_gen_aptx = { version = "0.1.0", path = "../swagger_gen_aptx" }
swagger_gen_standard = { version = "0.1.0", path = "../swagger_gen_standard" }
swagger_tk = { version = "0.1.0", path = "../swagger_tk" }

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
