[package]
name = "simple_bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
hex-literal = "1.1.0"
oxc = "0.101.0"
oxc_ast_visit = "0.101.0"
oxc_codegen = "0.101.0"
oxc_resolver = "11.14.2"
oxc_semantic = "0.101.0"
oxc_span = "0.101.0"
oxc_transformer = "0.101.0"
path-clean = "1.0.1"
sha3 = "0.10.8"
