[package]
name = "swagger_gen_python"
version = "0.1.0"
edition = "2021"
description = "Python code generation renderers for swagger_gen"

[dependencies]
swagger_gen = { path = "../swagger_gen" }
indexmap = { version = "2.7.1", features = ["serde"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
