[package]
name = "ts_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
deno_core = "0.318.0"
deno_runtime = "0.185.0"
dirs-next = "2.0.0"
path-clean = "1.0.1"
simple_bundler = { version = "0.1.0", path = "../simple_bundler" }
tokio = { version = "1.41.1", features = ["test-util"]}
