[package]
name = "ts_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
dirs-next = "2.0.0"
path-clean = "1.0.1"
serde_json = "1.0"
simple_bundler = { version = "0.1.0", path = "../simple_bundler" }
tokio = { version = "1.48.0", features = ["full"] }
quickjs_runtime = { version = "0.17.0", features = ["console", "setimmediate", "setinterval", "settimeout", "typescript", "quickjs-ng"], default-features = false }
futures = "0.3.31"
